tests/requests/invalid/004.py
from restkit.errors import InvalidHTTPVersion
request = InvalidHTTPVersion